# virtual-cpu-proj

./: CMakeLists.txt  README.md  commands.hpp  main.cpp  processing.hpp
my-stack/: CMakeLists.txt  Stack.hpp  tests.cpp
processing/: CMakeLists.txt  commands.hpp  processing.hpp
test-programs/: factorial  fibo
